--- a/screen.css
+++ b/screen.css
@@ -1,1 +1,8 @@
-/* Add screen styles below */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root {
+    --header-text: "Playfair Display", Georgia, serif;
+    --secondary-text: "Roboto", Helvetica, sans-serif;
+    --accent-color: #A04196;
+}
+
