--- a/screen.css
+++ b/screen.css
@@ -6,3 +6,123 @@
     --accent-color: #A04196;
 }
 
+header {
+    margin: 0;
+}
+
+h1 {
+    font-family: var(--header-text);
+    color: #000;
+    letter-spacing: -3px;
+    font-size: 20pt;
+    font-weight: 700;
+    display: inline;
+}
+
+.logo {
+    color: var(--accent-color);
+    letter-spacing: 0px;
+}
+
+nav {
+    display: inline;
+    margin-left: 40px;
+    
+}
+
+a {
+    font-family: var(--secondary-text);
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 10pt;
+    color: #444444;
+    margin-left: 10px;
+}
+
+a:hover {
+    color: var(--accent-color);
+    text-decoration: underline;
+}
+
+.post {
+    font-weight: 600;
+    color: #1C1C1C;
+}
+
+img {
+    display: inline;
+    float: left;
+    padding-right: 20px;
+}
+
+.profile {
+    width: 800px;
+    margin: 0 auto;
+    padding-top: 60px;
+}
+
+.profile h2 {
+    font-family: var(--header-text);
+    font-weight: 400;
+    font-size: 20pt;
+    color: #444444;
+    margin: 15px 0 0 0;
+}
+
+.profile h3 {
+    font-family: var(--secondary-text);
+    font-weight: 300;
+    font-size: 12pt;
+    color: #444444;
+    margin: 0 0 10px 0;
+}
+
+.profile h4 {
+    font-family: var(--secondary-text);
+    font-size: 10pt;
+    color: #9B9B9B;
+    margin: 0 20px 0px 0;
+    display: inline;
+    font-weight: 400;
+}
+
+.buttons {
+    width: 800px;
+    margin: 0 auto;
+    padding-top: 60px;
+}
+
+.button1 {
+    font-family: var(--secondary-text);
+    font-size: 10pt;
+    color: #444444;
+    border-radius: 20px;
+    border: 1px solid #Dad4da;
+    background-color: #fff;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.button1:hover {
+    background-color: #F8F7F8;
+}
+
+.button2 {
+    font-family: var(--secondary-text);
+    font-size: 10pt;
+    background-color: var(--accent-color);
+    color: #fff;
+    border-radius: 20px;
+    border: 1px solid var(--accent-color);
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-left: 20px;
+}
+
+.button2:hover {
+    background-color: #74216C;
+}
