Added posts, projects, about, and experience sections, and changed positioning of nav bar

--- a/screen.css
+++ b/screen.css
@@ -26,17 +26,17 @@ h1 {
 
 nav {
     display: inline;
-    margin-left: 40px;
-    
+    float: right;
+    margin-right: 40px;
+    margin-top: 10px;
 }
 
 a {
     font-family: var(--secondary-text);
-    text-transform: uppercase;
     text-decoration: none;
-    font-size: 10pt;
-    color: #444444;
-    margin-left: 10px;
+    font-size: 11pt;
+    color: #272727;
+    margin-left: 20px;
 }
 
 a:hover {
@@ -46,7 +46,7 @@ a:hover {
 
 .post {
     font-weight: 600;
-    color: #1C1C1C;
+    color: #74216C;
 }
 
 img {
@@ -107,6 +107,7 @@ img {
 
 .button1:hover {
     background-color: #F8F7F8;
+    border: 1px solid var(--accent-color);
 }
 
 .button2 {
@@ -126,3 +127,58 @@ img {
 .button2:hover {
     background-color: #74216C;
 }
+
+main {
+    display: grid;
+    gap: 20px;
+    width: 800px;
+    margin: 0 auto;
+    padding: 30px;
+    grid-template-columns: 500px 250px;
+}
+
+.posts {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.projects {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.about {
+    grid-column: 2;
+    grid-row: 1;
+    background-color: rgba(248, 247, 248, .50);
+    padding: 10px 40px 10px 20px;
+}
+
+.experience {
+    grid-column: 2;
+    grid-row: 2;
+    background-color: rgba(248, 247, 248, .50);
+    padding: 10px 40px 10px 20px;
+}
+
+h2 {
+    font-family: var(--header-text);
+    font-weight: 400;
+    font-size: 18pt;
+    color: #444444;
+    margin: 15px 0 0 0;
+}
+
+h3 {
+    font-family: var(--secondary-text);
+    color: #444444;
+    font-size: 14pt;
+}
+
+p {
+    font-family: var(--secondary-text);
+    color: #3b3b3b;
+    font-size: 10pt;
+    line-height: 14pt;
+}
+
